fix: image broke on small medias

--- a/style.css
+++ b/style.css
@@ -107,9 +107,18 @@ ul {
   section {
     padding: 20px;
   }
+
+  #home .card img {
+    width: 100%;
+    height: 100%;
+  }
   
-  #projects .card.card {
+  #projects .card {
     flex-direction: column;
+  }
+
+  #projects .card img {
+    width: 100%;
   }
 }
 
